<resources>
    <string name="app_name">Gideon</string>
    <string name="login_with_google">Sign in with Google</string>
    <string name="login_with_email">Sign in with Email</string>
    <string name="welcome_to">Welcome to</string>
    <string name="groups">Groups</string>
    <string name="locations">Locations</string>
    <string name="welcome">Welcome: </string>
    <string name="nav_drawer_open">Navigation drawer open</string>
    <string name="nav_drawer_close">Navigation drawer open</string>
    <string name="today_tasks">Today\'s Tasks</string>
    <string name="your_groups">Your Groups</string>
    <string name="name">Name</string>
    <string name="note">Note</string>
    <string name="save_group">Save Group</string>
    <string name="save">Save</string>
    <string name="name_error">Name should not be empty</string>
    <string name="add_group_added">Group saved successfully</string>

    <!--Locations-->
    <string name="your_locations">Your Locations</string>
    <string name="save_location">Save Location</string>
    <string name="address">Address</string>
    <string name="set_as_default_location">Set as default location</string>
    <string name="address_error">Address should not be empty</string>
    <string name="location_saved">Location saved successfully</string>

    <string name="location_save_error">There was an error while trying to save the location, please try it again.</string>

    <!-- Tasks -->
    <string name="save_task">Save Task</string>
    <string name="description">Description</string>
    <string name="due_date">Due date</string>
    <string-array name="priorities">
        <item name="p1">P1</item>
        <item name="p2">P2</item>
        <item name="p3">P3</item>
        <item name="p4">P4</item>
    </string-array>

    <string name="priority">Priority</string>
    <string name="group">Group</string>
    <string name="location">Location</string>
    <string name="want_to_be_notified">Want to be notified when you are near?</string>
    <string name="description_error">Description should not be empty</string>
    <string name="due_date_error">Due date should not be empty</string>
    <string name="priority_error">Priority should not be empty</string>
    <string name="group_error">Group should not be empty</string>
    <string name="location_error">Location should not be empty if you want to be notified when you are near</string>
    <string name="task_added">Task added successfully</string>
    <string name="task_error">There were an error while adding your task, please try it again.</string>
    <string name="no_location">-</string>
    <string name="date_range">Filter by Date</string>
    <string name="filter_tasks_by_status">Filter Tasks</string>
    <string-array name="status_array">
        <item name="todo">TO-DO</item>
        <item name="completed">Completed</item>
    </string-array>

    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>

    <string name="permissions_not_allowed_error_title">Location permissions required</string>
    <string name="permissions_not_allowed_error_description">We need to have access to your location all the time cause this is required to be able to set tasks that will notify you when you are near to the place that you want to complete them.</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="allow">Allow</string>
    <string name="cancel">Cancel</string>
    <string name="task_near_you">Task nearby</string>
    <string name="tasks_channel_name">Tasks Channel</string>
    <string name="tasks_channel_description">This channel is to display notifications when you are near by a location where you can complete a task.</string>

    <string name="triggering_geofence_error_broadcast_receiver">There were an error while processing the broadcast receiver, geofence transition: %d</string>
    <string name="complete">Complete</string>

    <string name="no_tasks_completed">There are not tasks completed for this day, Let\'s go to complete one!</string>
    <string name="no_tasks_todo">There are not pending tasks to complete for this day, Great job!</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="loading">There are not pending tasks</string>

    <string name="user_profile_image">User profile image</string>
    <string name="empty_content_image">No Tasks image</string>
    <string name="remove_group_button">Remove group</string>
    <string name="remove_location_button">Remove location</string>

</resources>