<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vg_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        style="@style/body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/double_margin"
        android:layout_marginTop="@dimen/double_margin"
        android:text="@string/description" />

    <TextView
        android:id="@+id/tv_description"
        style="@style/caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/double_margin"
        tools:text="Task description" />

    <TextView
        style="@style/body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/double_margin"
        android:layout_marginTop="@dimen/base_margin"
        android:text="@string/location" />

    <TextView
        android:id="@+id/tv_location"
        style="@style/caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/double_margin"
        android:layout_marginTop="@dimen/base_margin"
        android:ellipsize="end"
        android:maxLength="50"
        tools:text="Salem 23 Real de cana" />

    <TextView
        style="@style/body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/double_margin"
        android:layout_marginTop="@dimen/base_margin"
        android:text="@string/group" />

    <TextView
        android:id="@+id/tv_group"
        style="@style/caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/double_margin"
        android:layout_marginTop="@dimen/base_margin"
        android:layout_marginBottom="@dimen/double_margin"
        android:ellipsize="end"
        android:maxLength="50"
        tools:text="Group" />

</LinearLayout>